Trabajo final entrega 1 y 2